--- a/release/ClientApp/src/components/MainPage/MainCagalogue/style.css
+++ b/release/ClientApp/src/components/MainPage/MainCagalogue/style.css
@@ -10572,10 +10572,10 @@ Input, textarea : 14px/1.6 '', Arial, sans-serif;
     left: 12px;
   }
   
-  .block2-labelsale::before {
+  /* .block2-labelsale::before {
     background-color: #e65540;
     content: 'Sale';
-  }
+  } */
   
   .block2-labelnew::before {
     background-color: #66a8a6;
