--- a/release/ClientApp/src/components/Header/style.css
+++ b/release/ClientApp/src/components/Header/style.css
@@ -1,6 +1,6 @@
 a,
 a:hover {
-    color: #f5bc04
+    color: #5dd95d
 }
 
 .fh5co_header_bg {
@@ -13,7 +13,7 @@ a:hover {
 }
 
 .treding_btn {
-    background: #f5bc04;
+    background: #5dd95d;
     color: #fff;
     margin: 0 10px;
     display: inline-block;
@@ -22,7 +22,7 @@ a:hover {
 
 .treding_btn:hover,
 .treding_btn:focus {
-    background: #f5bc04;
+    background: #5dd95d;
     color: #fff;
     margin: 0 10px;
     display: inline-block;
@@ -40,7 +40,7 @@ a:hover {
     clip-path: polygon(0 1%, 100% 0, 0 100%, 0% 100%);
     height: 20px;
     width: 20px;
-    background: #f5bc04;
+    background: #5dd95d;
     position: absolute;
     left: 9px
 }
@@ -74,7 +74,7 @@ a:hover {
 .fh5co_display_table:focus {
     display: table;
     color: #777;
-    border: 1px solid #f5bc04 !important;
+    border: 1px solid #5dd95d !important;
     cursor: pointer;
     -webkit-border-radius: 50%;
     -moz-border-radius: 50%;
@@ -114,7 +114,7 @@ a:hover {
     -webkit-transition: all .5s ease;
     -ms-transition: all .5s ease;
     transition: all .5s ease;
-    background: #f5bc04 !important;
+    background: #5dd95d !important;
     -webkit-clip-path: polygon(100% 0, 100% 85%, 14% 85%, 0 100%, 0% 60%, 0 0);
     -moz-clip-path: polygon(100% 0, 100% 85%, 14% 85%, 0 100%, 0% 60%, 0 0);
     -ms-clip-path: polygon(100% 0, 100% 85%, 14% 85%, 0 100%, 0% 60%, 0 0);
@@ -142,7 +142,7 @@ a:hover {
 
 .navbar-light .navbar-nav .nav-link:focus,
 .navbar-light .navbar-nav .nav-link:hover {
-    background: #f5bc04 !important;
+    background: #5dd95d !important;
     color: #fff !important;
     padding-top: 12px !important;
     padding-bottom: 15px !important;
@@ -400,7 +400,7 @@ a:hover {
 }
 
 .c_m {
-    color: #f5bc04
+    color: #5dd95d
 }
 
 .fh5co_small_post_heading {
@@ -492,7 +492,7 @@ a:hover {
     content: '';
     height: 120%;
     width: 120%;
-    background-color: #f5bc04;
+    background-color: #5dd95d;
     z-index: -1;
     top: -10%;
     right: -10%;
@@ -553,7 +553,7 @@ a:hover {
 
 .fh5co_tagg:hover,
 .fh5co_tagg:focus {
-    background: #f5bc04;
+    background: #5dd95d;
     color: #fff;
     text-decoration: none
 }
@@ -610,8 +610,8 @@ a:hover {
 .fh5co_footer_bg {
     background: #222;
     color: #fff;
-    -webkit-clip-path: polygon(0 17%, 100% 0, 100% 100%, 0% 100%);
-    clip-path: polygon(0 17%, 100% 0, 100% 100%, 0% 100%)
+    /*-webkit-clip-path: polygon(0 17%, 100% 0, 100% 100%, 0% 100%);*/
+    /*clip-path: polygon(0 17%, 100% 0, 100% 100%, 0% 100%)*/
 }
 
 .footer_logo {
@@ -654,7 +654,7 @@ a:hover {
 .fh5co_display_table_footer:focus {
     display: table;
     color: #777;
-    border: 1px solid #f5bc04 !important;
+    border: 1px solid #5dd95d !important;
     cursor: pointer;
     -webkit-border-radius: 50%;
     -moz-border-radius: 50%;
@@ -680,7 +680,7 @@ a:hover {
 
 .footer_menu li>a:hover,
 .footer_menu li>a:focus {
-    color: #f5bc04 !important;
+    color: #5dd95d !important;
     padding: 8px 0 !important;
     display: -webkit-box;
     margin-left: 5px
@@ -730,11 +730,11 @@ a:hover {
 }
 
 .fh5co_footer_text_box:focus {
-    border-color: #f5bc04
+    border-color: #5dd95d
 }
 
 .fh5co_footer_subcribe {
-    background: #f5bc04 !important;
+    background: #5dd95d !important;
     border-bottom: 2px solid #fff !important;
     border-top: 0px solid #fff !important;
     border-top: 0px solid #fff !important;
@@ -760,7 +760,7 @@ a:hover {
 
 #fh5co_contact_form input:focus,
 #fh5co_contact_form textarea:focus {
-    border-color: #f5bc04
+    border-color: #5dd95d
 }
 
 
@@ -780,7 +780,7 @@ a:hover {
 .fh5co_con:focus {
     text-decoration: none;
     font-size: 24px;
-    color: #f5bc04;
+    color: #5dd95d;
     font-weight: 800
 }
 
@@ -802,7 +802,7 @@ a:hover {
     border: 1px solid #fff !important;
     color: #fff !important;
     font-size: 24px !important;
-    background: #f5bc04;
+    background: #5dd95d;
     padding: 10px 15px;
     margin: 0 20px
 }
@@ -842,9 +842,9 @@ a:hover {
 }
 
 .fh5co_contact_us_no_icon_difh5co_hover:hover>.fh5co_contact_us_no_icon_difh5co_hover_1>.fh5co_contact_us_no_icon_div {
-    color: #f5bc04 !important;
+    color: #5dd95d !important;
     cursor: pointer;
-    border: 2px solid #f5bc04 !important
+    border: 2px solid #5dd95d !important
 }
 
 .fh5co_contact_us_no_icon_difh5co_hover_2 {
@@ -944,7 +944,7 @@ a:hover {
 }
 
 .contact_btn {
-    background: #f5bc04 !important;
+    background: #5dd95d !important;
     -webkit-border-radius: 0 !important;
     -moz-border-radius: 0 !important;
     -ms-border-radius: 0 !important;
@@ -956,12 +956,12 @@ a:hover {
 .contact_btn:hover,
 .contact_btn:focus {
     background: none !important;
-    border: 1px solid #f5bc04 !important;
+    border: 1px solid #5dd95d !important;
     -webkit-border-radius: 0 !important;
     -moz-border-radius: 0 !important;
     -ms-border-radius: 0 !important;
     border-radius: 0 !important;
-    color: #f5bc04 !important;
+    color: #5dd95d !important;
     padding: 10px 50px !important
 }
 
