--- a/release/ClientApp/src/components/CallModal/style.css
+++ b/release/ClientApp/src/components/CallModal/style.css
@@ -1,5 +1,5 @@
 .pulse {
-    background: #ff8b23;
+    background: #5dd95d;
     border-radius: 50%;
     width: 50px;
     height: 50px;
@@ -19,7 +19,7 @@
     display: block;
     position: absolute;
     border: 50%;
-    border: 1px solid #ff8b23;
+    border: 1px solid #5dd95d;
     left: -20px;
     right: -20px;
     top: -20px;
